force-app/main/default/objects/Cart_Product__c/Cart_Product__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Carts to Products</description>
    <label>Cart Product</label>
    <nameField>
        <label>Cart Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cart Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>