force-app/main/default/objects/Cart_Product__c/fields/Price_Cents__c.field-meta.xml
<CustomField>
    <fullName>Price_Cents__c</fullName>
    <formula>Total__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price (Cents)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>