force-app/main/default/objects/Cart_Product__c/fields/Program_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Program_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Engagement</label>
    <referenceTo>Program_Engagement__c</referenceTo>
    <relationshipLabel>Cart Products</relationshipLabel>
    <relationshipName>Cart_Products</relationshipName>
    <type>Lookup</type>
</CustomField>